--- a/index.html
+++ b/index.html
@@ -51,31 +51,35 @@
             </ul>
           </div>
 
-        <hr>
-        <h3>Education</h3>
-        <ul>
-	  <li>
-            <span class="fas fa-graduation-cap"></span>
-            <section class="details-container">
-              <p class="course">Ph.D. in Electrical and Computer Engineering (Expected graduation: 2028/06)</p>
-              <p class="institution">University of Washington, Seattle</p>
-            </section>
-          </li>
-          <li>
-            <span class="fas fa-graduation-cap"></span>
-            <section class="details-container">
-              <p class="course">MS in Electrical and Computer Engineering</p>
-              <p class="institution">University of Washington, Seattle</p>
-            </section>
-          </li>
-          <li>
-            <span class="fas fa-graduation-cap"></span>
-            <section class="details-container">
-              <p class="course">BS in Electrical and Computer Engineering</p>
-              <p class="institution">The Ohio State Univeristy, Columbus</p>
-            </section>
-          </li>
-        </ul>
+          <div class="columns">
+            <div class="column">
+              <h3>Education</h3>
+              <ul>
+                <ul>
+                  <li>
+                    <span class="fas fa-graduation-cap"></span>
+                    <section class="details-container">
+                      <p class="course">Ph.D. in Electrical and Computer Engineering (Expected graduation: 2028/06)</p>
+                      <p class="institution">University of Washington, Seattle</p>
+                    </section>
+                  </li>
+                  <li>
+                    <span class="fas fa-graduation-cap"></span>
+                    <section class="details-container">
+                      <p class="course">MS in Electrical and Computer Engineering</p>
+                      <p class="institution">University of Washington, Seattle</p>
+                    </section>
+                  </li>
+                  <li>
+                    <span class="fas fa-graduation-cap"></span>
+                    <section class="details-container">
+                      <p class="course">BS in Electrical and Computer Engineering</p>
+                      <p class="institution">The Ohio State Univeristy, Columbus</p>
+                    </section>
+                  </li>
+                </ul>
+              </ul>
+            </div>
       </section>
     </section>
 		  <footer>
