--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
           <div class="column">
             <h3>Research Interests</h3>
             <ul>
-              <li><span class="icon fas fa-flask"></span>Human-Computer Interaction</li>
+              <li><span class="icon fas fa-flask"></span>
+                <section class="details-container">
+                  <p>Human-Computer Interaction</p>
+                </section>
+              </li>
               <li><span class="icon fas fa-robot"></span>Responsible AI</li>
               <li><span class="icon fas fa-graduation-cap"></span>Educational Technology</li>
               <li><span class="icon fas fa-brain"></span>UX Design</li>
