--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul>
               <li><span class="icon fas fa-flask"></span>
                 <section class="details-container">
-                  <p>Human-Computer Interaction</p>
+                  <p class="course">Ph.D. in Electrical and Computer Engineering</p>
                 </section>
               </li>
               <li><span class="icon fas fa-robot"></span>Responsible AI</li>
@@ -54,9 +54,7 @@
               <li><span class="icon fas fa-universal-access"></span>Accessibility</li>
             </ul>
           </div>
-        </div>
 
-        <div class="columns">
           <div class="column">
             <h3>Education</h3>
             <ul>
