--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                   <p class="course">Ph.D. in Electrical and Computer Engineering</p>
                 </section>
               </li>
-              <li><span class="icon fas fa-robot"></span>Responsible AI</li>
-              <li><span class="icon fas fa-graduation-cap"></span>Educational Technology</li>
+              <li><span class="fa-solid fa-robot"></span>Responsible AI</li>
+              <li><span class="fas fa-graduation-cap"></span>Educational Technology</li>
               <li><span class="icon fas fa-brain"></span>UX Design</li>
               <li><span class="icon fas fa-universal-access"></span>Accessibility</li>
             </ul>
