--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
               </li>
               <li><span class="fa-solid fa-robot"></span>Responsible AI</li>
               <li><span class="fas fa-graduation-cap"></span>Educational Technology</li>
+              <li>
+                <span class="fas fa-graduation-cap"></span>
+                <section class="details-container">
+                  <p class="course">Ph.D. in Electrical and Computer Engineering (Expected graduation: 2028/06)</p>
+                </section>
+              </li>
               <li><span class="icon fas fa-brain"></span>UX Design</li>
               <li><span class="icon fas fa-universal-access"></span>Accessibility</li>
             </ul>
