--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <ul>
               <li><span class="icon fas fa-flask"></span>
                 <section class="details-container">
-                  <p class="course">Ph.D. in Electrical and Computer Engineering</p>
+                  <p class="course">Human-computer Interaction</p>
                 </section>
               </li>
               <li><span class="fa-solid fa-robot"></span>Responsible AI</li>
@@ -53,7 +53,7 @@
               <li>
                 <span class="fas fa-graduation-cap"></span>
                 <section class="details-container">
-                  <p class="course">Ph.D. in Electrical and Computer Engineering (Expected graduation: 2028/06)</p>
+                  <p class="course">Ph.D. in Electrical and Computer Engineering</p>
                 </section>
               </li>
               <li><span class="icon fas fa-brain"></span>UX Design</li>
