--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <div class="column">
             <h3>Research Interests</h3>
             <ul>
-              <li><span class="icon fas fa-flask"></span>
+              <li><span class="fa-solid fa-flask"></i>></span>
                 <section class="details-container">
                   <p class="course">Human-computer Interaction</p>
                 </section>
