--- a/index.html
+++ b/index.html
@@ -43,19 +43,13 @@
           <div class="column">
             <h3>Research Interests</h3>
             <ul>
-              <li><span class="fa-solid fa-flask"></i>></span>
+              <li><span class="fa-solid fa-flask"></i></span>
                 <section class="details-container">
                   <p class="course">Human-computer Interaction</p>
                 </section>
               </li>
               <li><span class="fa-solid fa-robot"></span>Responsible AI</li>
               <li><span class="fas fa-graduation-cap"></span>Educational Technology</li>
-              <li>
-                <span class="fas fa-graduation-cap"></span>
-                <section class="details-container">
-                  <p class="course">Ph.D. in Electrical and Computer Engineering</p>
-                </section>
-              </li>
               <li><span class="icon fas fa-brain"></span>UX Design</li>
               <li><span class="icon fas fa-universal-access"></span>Accessibility</li>
             </ul>
