--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
           <div class="column">
             <h3>Research Interests</h3>
             <ul>
-              <li><span class="fa-solid fa-robot"></span>Human-computer Interaction</li>
+              <li><span class="fa-solid fa-robot"></span>
+                <section class="details-container">
+                  <p class="course">Human-computer Interaction</p>
+                </section>
+              </li>
               <li><span class="fa-solid fa-robot"></span>Responsible AI</li>
               <li><span class="fa-solid fa-robot"></span>Educational Technology</li>
               <li><span class="fa-solid fa-robot"></span>UX Design</li>
