--- a/index.html
+++ b/index.html
@@ -48,10 +48,21 @@
                   <p class="course">Human-computer Interaction</p>
                 </section>
               </li>
-              <li><span class="fa-solid fa-robot"></span>Responsible AI</li>
-              <li><span class="fa-solid fa-robot"></span>Educational Technology</li>
-              <li><span class="fa-solid fa-robot"></span>UX Design</li>
-              <li><span class="fa-solid fa-robot"></span>Accessibility</li>
+              <li><span class="fa-solid fa-robot"></span>
+                <section class="details-container">
+                  <p class="course">Responsible AI</p>
+                </section>
+              </li>
+              <li><span class="fa-solid fa-robot"></span>
+                <section class="details-container">
+                  <p class="course">Educational Technology</p>
+                </section>
+              </li>
+              <li><span class="fa-solid fa-robot"></span>
+                <section class="details-container">
+                  <p class="course">Accessibility</p>
+                </section>
+              </li>
             </ul>
           </div>
 
