--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <a href="/contact">Contact</a>
       </nav>
     </section>
-    <header>
+
+    <!--<header>
       <h1 class="h1-header">ABOUT ME</h1>
-    </header>
+    </header>-->
 
     <section id="profile-section">
       <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
