--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <section id="profile-section">
       <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
       <section>
+      <h1>About Kevin</h1>
         <p>
           My name is Kevin Shao, and I am a 1st-year Ph.D. student in the Department of Electrical
 	        and Computer Engineering (ECE) at the University of Washington (UW), Seattle. I recently
