--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
     </header>-->
 
     <section id="profile-section">
-      <section id="profile-image">
-        <img src="img/image.jpg" alt="Kevin Shao's profile picture">
-      </section>
+      <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
       <section id="about">
         <h1>About Kevin</h1>
         <p>
