--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     </header>-->
 
     <section id="profile-section">
-      <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
+      <div class="image-container">
+        <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
+      </div>
       <section id="about">
         <h1>About Kevin</h1>
         <p>
