--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </p>
         <hr>
         <div class="columns">
-          <div class="column">
+          <div class="column1">
             <h3>Research Interests</h3>
             <ul>
               <li><span class="fa-solid fa-robot"></span>
@@ -70,7 +70,7 @@
             </ul>
           </div>
 
-          <div class="column">
+          <div class="column2">
             <h3>Education</h3>
             <ul>
               <li>
