--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="image-container">
         <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
       </div>
-      <section id="about">
+      <div id="about">
         <h1>About Kevin</h1>
         <p>
           My name is Kevin Shao, and I am a 1st-year Ph.D. student in the Department of Electrical
@@ -97,7 +97,7 @@
             </ul>
           </div>
         </div>
-      </section>
+      </div>
     </section>
 		  <footer>
       <p class="centered">
