--- a/index.html
+++ b/index.html
@@ -99,6 +99,9 @@
         </div>
       </div>
     </section>
+    <section id="profile-section">
+      <p>TBD</p>
+    </section>
 		  <footer>
       <p class="centered">
         Site created by Kevin Shao. All other attributions cited in page source.
