--- a/index.html
+++ b/index.html
@@ -30,6 +30,21 @@
       <div class="image-container">
         <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
       </div>
+      <div class="profile-info">
+        <h1 class="name">Kevin Shao</h1>
+        <p class="email"><a href="mailto:kshao918@uw.edu">kshao918@uw.edu</a></p>
+        <p class="position">1s-year PhD Student at Electrical and Computer Engineering</p>
+        <p class="university">University of Washington</p>
+        <div class="social-icons">
+          <a href="#" class="icon twitter"></a>
+          <a href="#" class="icon google-scholar"></a>
+          <a href="#" class="icon github"></a>
+          <a href="#" class="icon linkedin"></a>
+          <a href="#" class="icon facebook"></a>
+          <a href="#" class="icon instagram"></a>
+          <a href="#" class="icon cv"></a>
+        </div>
+      </div>
       <div id="about">
         <h1>About Kevin</h1>
         <p>
@@ -43,7 +58,7 @@
           countries. Sketching and painting are also some great ways to make me relaxed.
         </p>
         <hr>
-        <div class="columns">
+        <div class="edu-interest">
           <div class="column1">
             <h3>Research Interests</h3>
             <ul>
@@ -99,9 +114,9 @@
         </div>
       </div>
     </section>
-    <section id="profile-section">
+    <!-- <section id="profile-section">
       <p>TBD</p>
-    </section>
+    </section> -->
 		  <footer>
       <p class="centered">
         Site created by Kevin Shao. All other attributions cited in page source.
