--- a/index.html
+++ b/index.html
@@ -27,22 +27,24 @@
     </header>-->
 
     <section id="profile-section">
-      <div class="image-container">
-        <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
-      </div>
-      <div class="profile-info">
-        <h1 class="name">Kevin Shao</h1>
-        <p class="email"><a href="mailto:kshao918@uw.edu">kshao918@uw.edu</a></p>
-        <p class="position">1s-year PhD Student at Electrical and Computer Engineering</p>
-        <p class="university">University of Washington</p>
-        <div class="social-icons">
-          <a href="#" class="icon twitter"></a>
-          <a href="#" class="icon google-scholar"></a>
-          <a href="#" class="icon github"></a>
-          <a href="#" class="icon linkedin"></a>
-          <a href="#" class="icon facebook"></a>
-          <a href="#" class="icon instagram"></a>
-          <a href="#" class="icon cv"></a>
+      <div id="profile">
+        <div class="image-container">
+          <img src="img/image.jpg" alt="Kevin Shao's profile picture" class="profile-image">
+        </div>
+        <div class="profile-info">
+          <h1 class="name">Kevin Shao</h1>
+          <p class="email"><a href="mailto:kshao918@uw.edu">kshao918@uw.edu</a></p>
+          <p class="position">1s-year PhD Student at Electrical and Computer Engineering</p>
+          <p class="university">University of Washington</p>
+          <div class="social-icons">
+            <a href="#" class="icon twitter"></a>
+            <a href="#" class="icon google-scholar"></a>
+            <a href="#" class="icon github"></a>
+            <a href="#" class="icon linkedin"></a>
+            <a href="#" class="icon facebook"></a>
+            <a href="#" class="icon instagram"></a>
+            <a href="#" class="icon cv"></a>
+          </div>
         </div>
       </div>
       <div id="about">
