--- a/index.html
+++ b/index.html
@@ -117,9 +117,12 @@
         </div>
       </div>
     </section>
-    <!-- <section id="profile-section">
+    <section id="selection-project">
       <p>TBD</p>
-    </section> -->
+    </section>
+    <section id="teaching">
+      <p>TBD</p>
+    </section>
 		  <footer>
       <p class="centered">
         Site created by Kevin Shao. All other attributions cited in page source.
