--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <h1 class="name">Kevin Shao</h1>
           <p class="email"><a href="mailto:kshao918@uw.edu">kshao918@uw.edu</a></p>
           <p class="position">1s-year PhD Student at Electrical and Computer Engineering</p>
-          <p class="university">University of Washington</p>
+          <p class="university"><a href="https://www.ece.uw.edu/">University of Washington</p>
           <div class="social-icons">
             <a href="#" class="icon twitter"></a>
             <a href="#" class="icon google-scholar"></a>
@@ -117,7 +117,7 @@
         </div>
       </div>
     </section>
-    <section id="selection-project">
+    <section id="selected-project">
       <p>TBD</p>
     </section>
     <section id="teaching">
