--- a/index.html
+++ b/index.html
@@ -121,7 +121,37 @@
       <p>TBD</p>
     </section>
     <section id="teaching">
-      <p>TBD</p>
+      <h2>Teaching Experiences</h2>
+      <div class="teaching-card">
+        <div class="teaching-logo">
+          <img src="university-logo.png" alt="University Logo">
+        </div>
+        <div class="teaching-details">
+          <h3>Teaching Assistant</h3>
+          <p class="organization">University Name</p>
+          <p class="date-location">August 2023 – Present · Location</p>
+          <ul>
+            <li>Assisted with coursework and grading for undergraduate students in Engineering courses.</li>
+            <li>Conducted weekly tutorial sessions and provided one-on-one support for students.</li>
+            <li>Developed resources to improve student understanding of challenging topics.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="teaching-card">
+        <div class="teaching-logo">
+          <img src="university-logo.png" alt="University Logo">
+        </div>
+        <div class="teaching-details">
+          <h3>Instructor</h3>
+          <p class="organization">Another University</p>
+          <p class="date-location">January 2021 – May 2023 · Location</p>
+          <ul>
+            <li>Designed and delivered a curriculum on AI and Machine Learning for non-technical students.</li>
+            <li>Supervised student projects, providing guidance on methodology and research practices.</li>
+            <li>Incorporated innovative teaching methods to engage diverse student groups.</li>
+          </ul>
+        </div>
+      </div>
     </section>
 		  <footer>
       <p class="centered">
