--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </div>
       <div class="teaching-card">
         <div class="teaching-logo">
-          <img src="university-logo.png" alt="University Logo">
+          <img src="img/osu.png" alt="University Logo">
         </div>
         <div class="teaching-details">
           <h3>Undergraduate Teaching Assistant</h3>
