--- a/index.html
+++ b/index.html
@@ -125,11 +125,17 @@
       <div class="timeline-container">
         <!-- Timeline -->
         <div class="timeline">
-          <div class="circle"></div>
+          <div class="timeline-item">
+            <div class="circle"></div>
+          </div>
           <div class="line"></div>
-          <div class="circle"></div>
+          <div class="timeline-item">
+            <div class="circle"></div>
+          </div>
           <div class="line"></div>
-          <div class="circle"></div>
+          <div class="timeline-item">
+            <div class="circle"></div>
+          </div>
         </div>
         <div class="teaching-card">
           <div class="teaching-logo">
