--- a/index.html
+++ b/index.html
@@ -125,42 +125,40 @@
       <div class="timeline-container">
         <!-- Timeline -->
         <div class="timeline">
-          <div class="timeline-item">
-            <div class="circle"></div>
+          <div class="timeline">
+            <div class="timeline-item">
+              <div class="circle"></div>
+              <div class="line"></div>
+            </div>
+            <div class="timeline-item">
+              <div class="circle"></div>
+            </div>
           </div>
-          <div class="line"></div>
-          <div class="timeline-item">
-            <div class="circle"></div>
+          <div class="teaching-card">
+            <div class="teaching-logo">
+              <img src="img/uw.png" alt="University Logo">
+            </div>
+            <div class="teaching-details">
+              <h3>Graduate Teaching Assistant</h3>
+              <p class="organization">University of Washington</p>
+              <p class="date-location">January 2023 – Present · Seattle, WA</p>
+              <ul>
+                <li>TBD</li>
+              </ul>
+            </div>
           </div>
-          <div class="line"></div>
-          <div class="timeline-item">
-            <div class="circle"></div>
-          </div>
-        </div>
-        <div class="teaching-card">
-          <div class="teaching-logo">
-            <img src="img/uw.png" alt="University Logo">
-          </div>
-          <div class="teaching-details">
-            <h3>Graduate Teaching Assistant</h3>
-            <p class="organization">University of Washington</p>
-            <p class="date-location">January 2023 – Present · Seattle, WA</p>
-            <ul>
-              <li>TBD</li>
-            </ul>
-          </div>
-        </div>
-        <div class="teaching-card">
-          <div class="teaching-logo">
-            <img src="img/osu.png" alt="University Logo">
-          </div>
-          <div class="teaching-details">
-            <h3>Undergraduate Teaching Assistant</h3>
-            <p class="organization">The Ohio State University</p>
-            <p class="date-location">August 2019 – May 2022 · Columbus, OH</p>
-            <ul>
-              <li>TBD</li>
-            </ul>
+          <div class="teaching-card">
+            <div class="teaching-logo">
+              <img src="img/osu.png" alt="University Logo">
+            </div>
+            <div class="teaching-details">
+              <h3>Undergraduate Teaching Assistant</h3>
+              <p class="organization">The Ohio State University</p>
+              <p class="date-location">August 2019 – May 2022 · Columbus, OH</p>
+              <ul>
+                <li>TBD</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
