--- a/index.html
+++ b/index.html
@@ -123,49 +123,49 @@
     <section id="teaching">
       <h2>Teaching Experiences</h2>
       <div class="timeline-container">
-        <!-- Timeline -->
+        <!-- First teaching experience -->
         <div class="timeline">
-          <div class="timeline">
-            <div class="timeline-item">
-              <div class="circle"></div>
-              <div class="line"></div>
-            </div>
-            <div class="timeline-item">
-              <div class="circle"></div>
-            </div>
+          <div class="timeline-item">
+            <div class="circle"></div>
+            <div class="line"></div>
           </div>
-          <div class="teaching-card-container">
-            <div class="teaching-card">
-              <div class="teaching-logo">
-                <img src="img/uw.png" alt="University Logo">
-              </div>
-              <div class="teaching-details">
-                <h3>Graduate Teaching Assistant</h3>
-                <p class="organization">University of Washington</p>
-                <p class="date-location">January 2023 – Present · Seattle, WA</p>
-                <ul>
-                  <li>TBD</li>
-                </ul>
-              </div>
-            </div>
-            <div class="teaching-card">
-              <div class="teaching-logo">
-                <img src="img/osu.png" alt="University Logo">
-              </div>
-              <div class="teaching-details">
-                <h3>Undergraduate Teaching Assistant</h3>
-                <p class="organization">The Ohio State University</p>
-                <p class="date-location">August 2019 – May 2022 · Columbus, OH</p>
-                <ul>
-                  <li>TBD</li>
-                </ul>
-              </div>
-            </div>
+        </div>
+        <div class="teaching-card">
+          <div class="teaching-logo">
+            <img src="img/uw.png" alt="University Logo">
+          </div>
+          <div class="teaching-details">
+            <h3>Graduate Teaching Assistant</h3>
+            <p class="organization">University of Washington</p>
+            <p class="date-location">January 2023 – Present · Seattle, WA</p>
+            <ul>
+              <li>TBD</li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Second teaching experience -->
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="circle"></div>
+          </div>
+        </div>
+        <div class="teaching-card">
+          <div class="teaching-logo">
+            <img src="img/osu.png" alt="University Logo">
+          </div>
+          <div class="teaching-details">
+            <h3>Undergraduate Teaching Assistant</h3>
+            <p class="organization">The Ohio State University</p>
+            <p class="date-location">August 2019 – May 2022 · Columbus, OH</p>
+            <ul>
+              <li>TBD</li>
+            </ul>
           </div>
         </div>
       </div>
     </section>
-		  <footer>
+		<footer>
       <p class="centered">
         Site created by Kevin Shao. All other attributions cited in page source.
       </p>
