--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!-- Second teaching experience -->
         <div class="timeline">
           <div class="timeline-item">
-            <div class="circle"></div>
+            <div class="circle hollow"></div>
           </div>
         </div>
         <div class="teaching-card">
@@ -165,6 +165,7 @@
         </div>
       </div>
     </section>
+
 		<footer>
       <p class="centered">
         Site created by Kevin Shao. All other attributions cited in page source.
