--- a/experience.html
+++ b/experience.html
@@ -18,6 +18,7 @@
 	      <!--<a href="/cv">CV</a>-->
         <a href="/gallary">Gallary</a>
         <a href="/contact">Contact</a>
+				<a href="/test">test</a>
       </nav>
     </section>
     <header>
@@ -78,92 +79,6 @@
 			  <li>Participated in a team design-build program (<a href="https://u.osu.edu/osutap/">Toy Adaptation Program</a>) to help children with disabilities.</li>
       </ul>
 		</section>
-
-<style>
-    .timeline {
-        position: relative;
-        max-width: 900px;
-        margin: 50px auto;
-    }
-    .timeline::after {
-        content: '';
-        position: absolute;
-        width: 6px;
-        background-color: #f80;
-        top: 0;
-        bottom: 0;
-        left: 50%;
-        margin-left: -3px;
-    }
-    .container {
-        padding: 10px 40px;
-        position: relative;
-        background-color: inherit;
-        width: 50%;
-    }
-    .left {
-        left: 0;
-    }
-    .right {
-        left: 50%;
-    }
-    .content {
-        padding: 20px 30px;
-        background-color: white;
-        position: relative;
-        border-radius: 6px;
-    }
-    .left .content {
-        margin-left: 15px;
-    }
-    .right .content {
-        margin-right: 15px;
-    }
-    .left::after, .right::after {
-        content: '';
-        position: absolute;
-        width: 25px;
-        height: 25px;
-        right: -17px;
-        background-color: white;
-        border: 4px solid #f80;
-        top: 15px;
-        border-radius: 50%;
-        z-index: 1;
-    }
-    .right::after {
-        left: -17px;
-    }
-    @media screen and (max-width: 600px) {
-        .container {
-            width: 100%;
-        }
-        .left, .right {
-            left: 0;
-        }
-    }
-</style>
-
-<div class="timeline">
-    <div class="container left">
-        <div class="content">
-            <h2>2024</h2>
-            <p>PhD Student Researcher at University of Washington</p>
-        </div>
-    </div>
-    <div class="container right">
-        <div class="content">
-            <h2>2022</h2>
-            <p>Master's in Electrical and Computer Engineering from University of Washington</p>
-        </div>
-    </div>
-    <div class="container left">
-        <div class="content">
-            <h2>2020</h2>
-            <p>BS in Electrical and Computer Engineering from The Ohio State University</p>
-        </div>
-    </div>
-</div>
 		<footer>
 			<p class="centered">
 				Site created by Kevin Shao. All other attributions cited in page source.
