--- a/test.html
+++ b/test.html
@@ -1,118 +1,65 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Academic Research Experiences</title>
-<style>
-    body {
-        font-family: Arial, sans-serif;
-        margin: 20px;
-        background-color: #fff;
-        color: #333;
-    }
+ <html lang="en">
+  <head>
+		<title>Kevin Shao</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
+	</head>
+	<body>
+    <section id="teaching">
+      <h2>Teaching Experiences</h2>
+      <div class="timeline-container">
+        <!-- First teaching experience
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="circle"></div>
+            <div class="line"></div>
+          </div>
+        </div> -->
 
-    .timeline {
-        position: relative;
-        max-width: 800px;
-        margin: 0 auto;
-    }
-
-    .timeline::after {
-        content: '';
-        position: absolute;
-        width: 6px;
-        background-color: #ccc;
-        top: 0;
-        bottom: 0;
-        left: 30px;
-        margin-left: -3px;
-    }
-
-    .container {
-        padding: 10px 40px;
-        position: relative;
-        background-color: inherit;
-        width: 100%;
-    }
-
-    .container::after {
-        content: '';
-        position: absolute;
-        width: 25px;
-        height: 25px;
-        right: -17px;
-        background-color: white;
-        border: 4px solid #ccc;
-        top: 15px;
-        border-radius: 50%;
-        z-index: 1;
-    }
-
-    .left {
-        left: 0;
-    }
-
-    .right {
-        left: 60px;
-    }
-
-    .content {
-        padding: 20px 30px;
-        background-color: #f9f9f9;
-        position: relative;
-        border-radius: 6px;
-    }
-
-    h2 {
-        font-size: 24px;
-        color: #333;
-        margin-bottom: 10px;
-    }
-
-    p {
-        font-size: 16px;
-        line-height: 1.6;
-        color: #666;
-    }
-</style>
-</head>
-<body>
-
-<div class="timeline">
-    <div class="container left">
-        <div class="content">
-            <h2>PhD Student Researcher</h2>
-            <p>Carnegie Mellon University - August 2023 - Present - Pittsburgh, PA</p>
+        <!-- First teaching experience -->
+        <div class="teaching-card">
+          <div class="teaching-logo">
+            <img src="img/uw.png" alt="University Logo">
+          </div>
+          <div class="teaching-details">
+            <h3>Graduate Teaching Assistant</h3>
+            <p class="organization">University of Washington</p>
+            <p class="date-location">January 2023 – Present · Seattle, WA</p>
             <ul>
-                <li>Advisor: Ken Koedinger</li>
-                <li>Research in Learning Sciences, Education Technologies, and Learning Analytics</li>
+              <li>TBD</li>
             </ul>
+          </div>
         </div>
-    </div>
-    <div class="container right">
-        <div class="content">
-            <h2>Undergraduate Research Project Principal Investigator</h2>
-            <p>Ministry of Science and Technology - May 2021 - February 2022 - Taipei, Taiwan</p>
-            <ul>
-                <li>Researched on Building Natural Language Generation Chatbots</li>
-                <li>Compared the user experience of different chatbot designs</li>
-                <li>Results rewarded 2nd place at 2023 CHI Student Research Competition</li>
-            </ul>
-        </div>
-    </div>
-    <div class="container left">
-        <div class="content">
-            <h2>Research Assistant</h2>
-            <p>National Taiwan Normal University - April 2019 - August 2023 - Taipei, Taiwan</p>
-            <ul>
-                <li>Served as Research Assistant for multiple professors</li>
-                <li>Developed interactive creativity task platform</li>
-                <li>Used GPT-2 and BERT for NLP chatbots</li>
-            </ul>
-        </div>
-    </div>
-</div>
 
-</body>
+        <!-- Second teaching experience -->
+        <div class="teaching-card">
+          <div class="teaching-logo">
+            <img src="img/osu.png" alt="University Logo">
+          </div>
+          <div class="teaching-details">
+            <h3>Undergraduate Teaching Assistant</h3>
+            <p class="organization">The Ohio State University</p>
+            <p class="date-location">August 2019 – May 2022 · Columbus, OH</p>
+            <ul>
+              <li>TBD</li>
+            </ul>
+          </div>
+        </div>
+
+
+
+
+        <!-- <div class="timeline">
+          <div class="timeline-item">
+            <div class="circle hollow"></div>
+          </div>
+        </div> -->
+
+      </div>
+    </section>
+	</body>
 </html>
