--- a/test.html
+++ b/test.html
@@ -12,13 +12,13 @@
     <section id="teaching">
       <h2>Teaching Experiences</h2>
       <div class="timeline-container">
-        <!-- First teaching experience
+
         <div class="timeline">
           <div class="timeline-item">
             <div class="circle"></div>
             <div class="line"></div>
           </div>
-        </div> -->
+        </div>
 
         <!-- First teaching experience -->
         <div class="teaching-card">
@@ -36,6 +36,11 @@
         </div>
 
         <!-- Second teaching experience -->
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="circle hollow"></div>
+          </div>
+        </div>
         <div class="teaching-card">
           <div class="teaching-logo">
             <img src="img/osu.png" alt="University Logo">
@@ -49,15 +54,6 @@
             </ul>
           </div>
         </div>
-
-
-
-
-        <!-- <div class="timeline">
-          <div class="timeline-item">
-            <div class="circle hollow"></div>
-          </div>
-        </div> -->
 
       </div>
     </section>
