--- a/test.html
+++ b/test.html
@@ -23,12 +23,12 @@
         <!-- First teaching experience -->
         <div class="teaching-card">
           <div class="teaching-logo">
-            <img src="img/uw.png" alt="University Logo">
+            <img src="image.png" alt="University Logo">
           </div>
           <div class="teaching-details">
-            <h3>Graduate Teaching Assistant</h3>
-            <p class="organization">University of Washington</p>
-            <p class="date-location">January 2023 – Present · Seattle, WA</p>
+            <h3>XXX</h3>
+            <p class="organization">XXX</p>
+            <p class="date-location">XXX</p>
             <ul>
               <li>TBD</li>
             </ul>
@@ -43,12 +43,12 @@
         </div>
         <div class="teaching-card">
           <div class="teaching-logo">
-            <img src="img/osu.png" alt="University Logo">
+            <img src="image.png" alt="University Logo">
           </div>
           <div class="teaching-details">
-            <h3>Undergraduate Teaching Assistant</h3>
-            <p class="organization">The Ohio State University</p>
-            <p class="date-location">August 2019 – May 2022 · Columbus, OH</p>
+            <h3>XXX</h3>
+            <p class="organization">XXX</p>
+            <p class="date-location">XXX</p>
             <ul>
               <li>TBD</li>
             </ul>
