--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
  <html lang="en">
   <head>
-		<title>Kevin Shao</title>
+		<title>XXX</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="/css/test.css">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
@@ -10,7 +10,7 @@
 	</head>
 	<body>
     <section id="teaching">
-      <h2>Teaching Experiences</h2>
+      <h2>Heading</h2>
       <div class="timeline-container">
 
         <div class="timeline">
@@ -36,6 +36,26 @@
         </div>
 
         <!-- Second teaching experience -->
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="circle hollow"></div>
+            <div class="line"></div>
+          </div>
+        </div>
+        <div class="teaching-card">
+          <div class="teaching-logo">
+            <img src="image.png" alt="University Logo">
+          </div>
+          <div class="teaching-details">
+            <h3>XXX</h3>
+            <p class="organization">XXX</p>
+            <p class="date-location">XXX</p>
+            <ul>
+              <li>TBD</li>
+            </ul>
+          </div>
+        </div>
+
         <div class="timeline">
           <div class="timeline-item">
             <div class="circle hollow"></div>
