--- a/test.html
+++ b/test.html
@@ -1,69 +1,92 @@
 <!DOCTYPE html>
- <html lang="en">
+<html lang="en">
   <head>
-		<title>XXX</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/test.css">
-    <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@300&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" rel="stylesheet">
-	</head>
-	<body>
+    <title>XXX</title>
+    <!-- link to main stylesheet -->
+    <link rel="stylesheet" type="text/css" href="./test.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Encode+Sans:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <section id="teaching">
       <h2>Heading</h2>
       <div class="timeline-container">
-
-        <div class="timeline">
+        <!-- <div class="timeline">
           <div class="timeline-item">
             <div class="circle"></div>
             <div class="line"></div>
           </div>
-        </div>
+        </div> -->
 
         <!-- First teaching experience -->
-        <div class="teaching-card">
+        <div class="teaching-card card1">
           <div class="teaching-logo">
-            <img src="image.png" alt="University Logo">
+            <img src="image.png" alt="University Logo" />
           </div>
           <div class="teaching-details">
             <h3>XXX</h3>
+            <p class="organization">XXX</p>
+            <p class="organization">XXX</p>
+            <p class="organization">XXX</p>
+            <p class="organization">XXX</p>
+            <p class="organization">XXX</p>
+            <p class="organization">XXX</p>
             <p class="organization">XXX</p>
             <p class="date-location">XXX</p>
             <ul>
               <li>TBD</li>
             </ul>
           </div>
+          <div class="circle"></div>
+          <div class="line"></div>
         </div>
 
         <!-- Second teaching experience -->
-        <div class="timeline">
+        <!-- <div class="timeline">
           <div class="timeline-item">
             <div class="circle hollow"></div>
             <div class="line"></div>
           </div>
-        </div>
-        <div class="teaching-card">
+        </div> -->
+        <div class="teaching-card card2">
           <div class="teaching-logo">
-            <img src="image.png" alt="University Logo">
+            <img src="image.png" alt="University Logo" />
           </div>
           <div class="teaching-details">
             <h3>XXX</h3>
             <p class="organization">XXX</p>
             <p class="date-location">XXX</p>
+            <p class="date-location">XXX</p>
+            <p class="date-location">XXX</p>
+            <p class="date-location">XXX</p>
+            <p class="date-location">XXX</p>
             <ul>
               <li>TBD</li>
             </ul>
           </div>
+          <div class="circle"></div>
+          <div class="line"></div>
+          <div class="lineToo"></div>
         </div>
-
+        <!--
         <div class="timeline">
           <div class="timeline-item">
             <div class="circle hollow"></div>
           </div>
-        </div>
-        <div class="teaching-card">
+        </div> -->
+        <div class="teaching-card card3">
           <div class="teaching-logo">
-            <img src="image.png" alt="University Logo">
+            <img src="image.png" alt="University Logo" />
           </div>
           <div class="teaching-details">
             <h3>XXX</h3>
@@ -71,11 +94,17 @@
             <p class="date-location">XXX</p>
             <ul>
               <li>TBD</li>
+              <li>TBD</li>
+              <li>TBD</li>
+              <li>TBD</li>
+              <li>TBD</li>
+              <li>TBD</li>
             </ul>
           </div>
+          <div class="circle"></div>
+          <div class="lineToo"></div>
         </div>
-
       </div>
     </section>
-	</body>
+  </body>
 </html>
