--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
   <head>
     <title>XXX</title>
     <!-- link to main stylesheet -->
-    <link rel="stylesheet" type="text/css" href="./test.css" />
+    <link rel="stylesheet" type="text/css" href="/css/test.css">
     <link
       href="https://fonts.googleapis.com/css2?family=Exo+2:wght@900&family=Oswald:wght@500&display=swap"
       rel="stylesheet"
