--- a/index.html
+++ b/index.html
@@ -122,13 +122,6 @@
     <section id="teaching">
       <h2>Teaching Experiences</h2>
       <div class="timeline-container">
-        <!-- First teaching experience
-        <div class="timeline">
-          <div class="timeline-item">
-            <div class="circle"></div>
-            <div class="line"></div>
-          </div>
-        </div> -->
 
         <!-- First teaching experience -->
         <div class="teaching-card">
@@ -144,9 +137,24 @@
             </ul>
           </div>
         </div>
+        <div class="teaching-card card1">
+          <div class="teaching-logo">
+            <img src="img/uw.png" alt="University Logo">
+          </div>
+          <div class="teaching-details">
+            <h3>Graduate Teaching Assistant</h3>
+            <p class="organization">University of Washington</p>
+            <p class="date-location">January 2023 – Present · Seattle, WA</p>
+            <ul>
+              <li>TBD</li>
+            </ul>
+          </div>
+          <div class="circle"></div>
+          <div class="line"></div>
+        </div>
 
         <!-- Second teaching experience -->
-        <div class="teaching-card">
+        <div class="teaching-card card2">
           <div class="teaching-logo">
             <img src="img/osu.png" alt="University Logo">
           </div>
@@ -158,17 +166,10 @@
               <li>TBD</li>
             </ul>
           </div>
+          <div class="circle"></div>
+          <div class="line"></div>
+          <div class="lineToo"></div>
         </div>
-
-
-
-
-        <!-- <div class="timeline">
-          <div class="timeline-item">
-            <div class="circle hollow"></div>
-          </div>
-        </div> -->
-
       </div>
     </section>
 
