--- a/index.html
+++ b/index.html
@@ -133,7 +133,11 @@
             <p class="organization">University of Washington</p>
             <p class="date-location">January 2023 – Present · Seattle, WA</p>
             <ul>
-              <li>TBD</li>
+              <li>Lead EE 215 TA starting from Winter 2023.</li>
+              <li>Prepare review materials, conduct quiz/review sessions, and prepare exam problems.</li>
+              <li>Hold regular office hours, tutor students, and manage and respond to course-related emails.</li>
+              <li>Help organize lab materials, design quizzes, and lead quiz and lab sessions for the Engineering Switzerland Study Abroad Program led by Prof. Karl Böhringer</li>
+              <li>Served courses: EE 215: Fundamentals of Electrical Engineering, Engineering Switzerland Study Abroad 2023.
             </ul>
           </div>
           <div class="circle"></div>
