--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
           <p class="email"><a href="mailto:kshao918@uw.edu">kshao918@uw.edu</a></p>
           <p class="position">1s-year PhD Student at Electrical and Computer Engineering</p>
           <p class="university"><a href="https://www.ece.uw.edu/">University of Washington</p>
-          <div class="social-icons">
-            <!--<a href="https://twitter.com/YourTwitterHandle" target="_blank" class="icon twitter" aria-label="Twitter"></a>-->
-            <!--<a href="https://scholar.google.com/citations?user=YourGoogleScholarID" target="_blank" class="icon google-scholar" aria-label="Google Scholar"></a>-->
-            <!--<a href="https://github.com/YourGitHubUsername" target="_blank" class="icon github" aria-label="GitHub"></a>-->
-            <a href="https://www.linkedin.com/in/kevin-shao918/" target="_blank" class="icon linkedin" aria-label="LinkedIn"></a>
-            <!--<a href="https://www.facebook.com/YourFacebookProfile" target="_blank" class="icon facebook" aria-label="Facebook"></a>-->
-            <!--<a href="https://www.instagram.com/YourInstagramProfile/" target="_blank" class="icon instagram" aria-label="Instagram"></a>-->
-            <!--<a href="path/to/your-cv.pdf" target="_blank" class="icon cv" aria-label="CV"></a>-->
-          </div>
+            <div class="social-icons">
+              <!--<a href="https://twitter.com/YourTwitterHandle" target="_blank" class="icon twitter" aria-label="Twitter"></a>-->
+              <!--<a href="https://scholar.google.com/citations?user=YourGoogleScholarID" target="_blank" class="icon google-scholar" aria-label="Google Scholar"></a>-->
+              <!--<a href="https://github.com/YourGitHubUsername" target="_blank" class="icon github" aria-label="GitHub"></a>-->
+              <a href="https://www.linkedin.com/in/kevin-shao918/" target="_blank" class="icon linkedin" aria-label="LinkedIn"></a>
+              <!--<a href="https://www.facebook.com/YourFacebookProfile" target="_blank" class="icon facebook" aria-label="Facebook"></a>-->
+              <!--<a href="https://www.instagram.com/YourInstagramProfile/" target="_blank" class="icon instagram" aria-label="Instagram"></a>-->
+              <a href="path/to/your-cv.pdf" target="_blank" class="icon cv" aria-label="CV"></a>
+            </div>
         </div>
       </div>
       <div id="about">
