--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
         </div>
       </div>
     </section>
-    <section id="selected-project">
+    <!-- <section id="selected-project">
       <p>TBD</p>
-    </section>
+    </section> -->
     <section id="teaching">
       <h2>Teaching Experiences</h2>
       <div class="timeline-container">
