--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <!--<a href="/cv">CV</a>-->
         <!--<a href="/gallary">Gallary</a>-->
         <a href="/contact">Contact</a>
+        <a href="/test2">Test2</a>
       </nav>
     </section>
 
