--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <h1>Kevin Shao</h1>
       <nav>
         <a href="/">Home</a>
+        <a href="#teaching">Teaching</a>
         <a href="/experience">Experience</a>
         <a href="/project">Project</a>
         <a href="/research">Research</a>
