--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section id="nav-bar">
       <h1>Kevin Shao</h1>
       <nav>
-        <a href="/">Home</a>
+        <a href="#profile-section">Home</a>
         <a href="#teaching">Teaching</a>
         <a href="/experience">Experience</a>
         <a href="/project">Project</a>
